# langgraph_multi-agent-rag-customer-support-main

./: EMBEDDING_SETUP.md  HITL_Plan_final.md  QWEN.md  README.md  faq_config.yaml  init_database.sql  pyproject.toml  setup_database.py  simple_embedding_demo.md  simple_embedding_demo.py  system_flow_analysis.md  系统功能说明文档-技术实现版.md  系统功能说明文档.md
customer_support_chat/app/: graph.py
customer_support_chat/app/core/: humanloop_manager.py  settings.py
customer_support_chat/app/services/: chat_service.py  utils.py
customer_support_chat/app/services/assistants/: assistant_base.py  blog_search_assistant.py  car_rental_assistant.py  excursion_assistant.py  flight_booking_assistant.py  form_submission_assistant.py  hotel_booking_assistant.py  primary_assistant.py  woocommerce_assistant.py
customer_support_chat/app/services/guardrails/: __init__.py  guardrail_agents.py
customer_support_chat/app/services/tools/: __init__.py  blog.py  cars.py  excursions.py  flights.py  forms.py  hotels.py  lookup.py  woocommerce.py
customer_support_chat/app/services/vectordb/: vectordb.py
customer_support_chat/data/: travel2.sqlite
faq_documents/: test_faq.docx  test_faq.md  阿里云大模型ACP考试大纲V2.docx
faq_extension/: __init__.py  data_source.py  document_parser.py  update_service.py
user_data/: 304ba657-c3e9-4599-b546-e66045924271.json  39597317-e65a-4e9a-ad90-25ef8f54e758.json  4d11c1fe-73c4-4db2-b197-a79681951860.json  user_sessions.json.backup
vectorizer/app/: main.py
vectorizer/app/core/: settings.py
vectorizer/app/embeddings/: embedding_generator.py  local_embedding_generator.py
vectorizer/app/vectordb/: vectordb.py
web_app/: README.md  WEB_APP_MODULE_ANALYSIS.md  pyproject.toml
web_app/app/: __init__.py  main.py
web_app/app/core/: __init__.py  user_data_manager.py
web_app/app/templates/: chat.html
web_app/user_data/: 1449f371-1e11-4146-9479-30c329f47600.json  206d98b2-d8ac-471e-8923-8fc895e42f44.json  304ba657-c3e9-4599-b546-e66045924271.json  test_session.json
